--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+springdoc.swagger-ui.path=/api/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.show-actuator=true
 
+spring.flyway.enabled=false
